Add alarm section with input and audio

--- a/index.html
+++ b/index.html
@@ -39,8 +39,22 @@
       <h3>🌍 World Clock</h3>
       <div id="world"></div>
     </section>
+
+    <section>
+      <h3>🔔 Alarm</h3>
+
+      <input type="time" id="alarmTime">
+      <button onclick="setAlarm()">Set Alarm</button>
+
+      <p id="alarmStatus"></p>
+
+      <audio id="alarmSound">
+      <source src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg">
+      </audio>
+    </section>
   </main>
 
     <script src="script.js?v=4"></script>
+
 </body>
 </html>
