Refactor main section for improved layout

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
   </header>
 
-  <main>
-    <h2 id="zoneTitle">Current Time</h2>
-    <div id="clock">--:--:--</div>
+  <main class="app">
+    <section class="hero">
+      <h2 id="zoneTitle">Current Time in EST</h2>
+      <div id="clock"></div>
+    </section>
+
 
     <section>
       <h3>🌍 World Clock</h3>
@@ -59,7 +62,7 @@
       <source src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg">
       </audio>
     </section>
-  </main>
+  <main class="app">
 
     <script src="script.js?v=4"></script>
 
