Add zoneInfo paragraph for time zone information

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <section class="hero">
       <h2 id="zoneTitle">Current Time in EST</h2>
       <div id="clock"></div>
+      <p id="zoneInfo" style="opacity:0.75; margin-top:0.6rem;"></p>
     </section>
 
 
