Add upgrade section to index.html

--- a/index.html
+++ b/index.html
@@ -76,5 +76,13 @@
 
     <script src="script.js?v=4"></script>
 
+    <section id="upgradeSection">
+      <p>
+        ✨ Enjoying Time Architect?
+        <button onclick="enablePro()">Upgrade to Pro</button>
+      </p>
+    </section>
+
+    
 </body>
 </html>
