Add date and zone information paragraphs to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <h2 id="zoneTitle">Current Time in EST</h2>
       <div id="clock"></div>
       <p id="zoneInfo" style="opacity:0.75; margin-top:0.6rem;"></p>
+      <p id="dateInfo"></p>
+      <p id="zoneInfo"></p>
+      <p id="dstInfo"></p>
     </section>
 
 
