Add diffInfo paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <p id="dateInfo"></p>
       <p id="zoneInfo"></p>
       <p id="dstInfo"></p>
+      <p id="diffInfo"></p>
     </section>
 
 
