Fix audio tag structure for alarm sound

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
       <p id="alarmStatus"></p>
 
-      <audio id="alarmSound">
+      <audio id="alarmSound"></audio>
+
       <source src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg">
       </audio>
     </section>
