Add settings section with alarm and background groups

--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
     <input type="file" accept="image/*" onchange="uploadBackground(event)">
   </label>
 </section>
+
+<section id="settings">
+  <h3>⚙️ Settings</h3>
+
+  <div class="setting-group" id="alarmSettings">
+    <h4>🔔 Alarm</h4>
+    <!-- alarm controls will move here -->
+  </div>
+
+  <div class="setting-group" id="backgroundSettings">
+    <h4>🎨 Background</h4>
+    <!-- background controls will move here -->
+  </div>
+</section>
   
+    
 </body>
 </html>
