--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </p>
     </section>
 
-
+<!-- REMOVE THIS BLOCK -->
    <section id="customizeSection">
   <h3>🎨 Customize</h3>
 
@@ -133,11 +133,62 @@
   <div class="setting-group" id="alarmSettings">
     <h4>🔔 Alarm</h4>
     <!-- alarm controls will move here -->
+    <div id="alarmSettings">
+  <label>
+    Alarm Sound:
+    <select id="alarmSoundSelect" onchange="setAlarmSound(this.value)">
+      <option value="alarm1">Classic</option>
+      <option value="alarm2">Soft Bell</option>
+      <option value="alarm3">Digital</option>
+    </select>
+    <button onclick="previewAlarm()">Preview</button>
+  </label>
+
+  <label>
+    Volume:
+    <input
+      type="range"
+      min="0"
+      max="1"
+      step="0.05"
+      id="alarmVolume"
+      onchange="setAlarmVolume(this.value)"
+    />
+  </label>
+
+  <label>
+    Stop alarm using:
+    <select id="stopKeySelect" onchange="setStopKey(this.value)">
+      <option value="Space">Spacebar</option>
+      <option value="Enter">Enter</option>
+      <option value="Escape">Escape</option>
+    </select>
+  </label>
+</div>
+
   </div>
 
   <div class="setting-group" id="backgroundSettings">
     <h4>🎨 Background</h4>
     <!-- background controls will move here -->
+    <div id="backgroundSettings">
+  <label>
+    Background:
+    <select onchange="setBackground(this.value)">
+      <option value="none">Default</option>
+      <option value="bg1">Mountains</option>
+      <option value="bg2">City Night</option>
+      <option value="bg3">Abstract</option>
+      <option value="random">Random</option>
+    </select>
+  </label>
+
+  <label>
+    Custom Image:
+    <input type="file" accept="image/*" onchange="uploadBackground(event)">
+  </label>
+</div>
+
   </div>
 </section>
   
