Remove customize section from index.html
Removed the customize section with alarm sound, background, and custom image options.

--- a/index.html
+++ b/index.html
@@ -94,39 +94,7 @@
       </p>
     </section>
 
-<!-- REMOVE THIS BLOCK -->
-   <section id="customizeSection">
-  <h3>🎨 Customize</h3>
-
-  <!-- Alarm Sound -->
-  <label>
-    Alarm Sound:
-    <select id="alarmSoundSelect" onchange="setAlarmSound(this.value)">
-      <option value="alarm1">Classic</option>
-      <option value="alarm2">Soft Bell</option>
-      <option value="alarm3">Digital</option>
-    </select>
-  </label>
-
-  <!-- Background -->
-  <label>
-    Background:
-    <select id="bgSelect" onchange="setBackground(this.value)">
-      <option value="none">Default</option>
-      <option value="bg1">Mountains</option>
-      <option value="bg2">City Night</option>
-      <option value="bg3">Abstract</option>
-      <option value="random">Random</option>
-    </select>
-  </label>
-
-  <!-- Upload -->
-  <label>
-    Custom Image:
-    <input type="file" accept="image/*" onchange="uploadBackground(event)">
-  </label>
-</section>
-
+<!-- Settings -->
 <section id="settings">
   <h3>⚙️ Settings</h3>
 
