--- a/index.html
+++ b/index.html
@@ -94,72 +94,66 @@
       </p>
     </section>
 
-<!-- Settings -->
 <section id="settings">
   <h3>⚙️ Settings</h3>
 
-  <div class="setting-group" id="alarmSettings">
+  <div class="settings-section">
     <h4>🔔 Alarm</h4>
-    <!-- alarm controls will move here -->
-    <div id="alarmSettings">
-  <label>
-    Alarm Sound:
-    <select id="alarmSoundSelect" onchange="setAlarmSound(this.value)">
-      <option value="alarm1">Classic</option>
-      <option value="alarm2">Soft Bell</option>
-      <option value="alarm3">Digital</option>
-    </select>
-    <button onclick="previewAlarm()">Preview</button>
-  </label>
 
-  <label>
-    Volume:
-    <input
-      type="range"
-      min="0"
-      max="1"
-      step="0.05"
-      id="alarmVolume"
-      onchange="setAlarmVolume(this.value)"
-    />
-  </label>
+    <div class="setting-row">
+      <label>Alarm Sound</label>
+      <div class="inline">
+        <select id="alarmSoundSelect" onchange="setAlarmSound(this.value)">
+          <option value="alarm1">Classic</option>
+          <option value="alarm2">Soft Bell</option>
+          <option value="alarm3">Digital</option>
+        </select>
+        <button onclick="previewAlarm()">Preview</button>
+      </div>
+    </div>
 
-  <label>
-    Stop alarm using:
-    <select id="stopKeySelect" onchange="setStopKey(this.value)">
-      <option value="Space">Spacebar</option>
-      <option value="Enter">Enter</option>
-      <option value="Escape">Escape</option>
-    </select>
-  </label>
-</div>
+    <div class="setting-row">
+      <label>Volume</label>
+      <input
+        type="range"
+        min="0"
+        max="1"
+        step="0.05"
+        id="alarmVolume"
+        onchange="setAlarmVolume(this.value)"
+      />
+    </div>
 
+    <div class="setting-row">
+      <label>Stop alarm using</label>
+      <select id="stopKeySelect" onchange="setStopKey(this.value)">
+        <option value="Space">Spacebar</option>
+        <option value="Enter">Enter</option>
+        <option value="Escape">Escape</option>
+      </select>
+    </div>
   </div>
 
-  <div class="setting-group" id="backgroundSettings">
+  <div class="settings-section">
     <h4>🎨 Background</h4>
-    <!-- background controls will move here -->
-    <div id="backgroundSettings">
-  <label>
-    Background:
-    <select onchange="setBackground(this.value)">
-      <option value="none">Default</option>
-      <option value="bg1">Mountains</option>
-      <option value="bg2">City Night</option>
-      <option value="bg3">Abstract</option>
-      <option value="random">Random</option>
-    </select>
-  </label>
 
-  <label>
-    Custom Image:
-    <input type="file" accept="image/*" onchange="uploadBackground(event)">
-  </label>
-</div>
+    <div class="setting-row">
+      <label>Background</label>
+      <select onchange="setBackground(this.value)">
+        <option value="none">Default</option>
+        <option value="bg1">Mountains</option>
+        <option value="bg2">City Night</option>
+        <option value="bg3">Abstract</option>
+        <option value="random">Random</option>
+      </select>
+    </div>
 
+    <div class="setting-row">
+      <label>Custom Image</label>
+      <input type="file" accept="image/*" onchange="uploadBackground(event)" />
+    </div>
   </div>
 </section>
-  
     
 </body>
 </html>
