--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
 
       <audio id="alarmSound"></audio>
 
-      <source src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg">
-      </audio>
     </section>
-  <main class="app">
+  </main>
 
     <script src="script.js?v=4"></script>
 
