--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
       </div>
     </div>
 
+    <div class="settings-actions">
+      <button class="primary" onclick="saveSettings()">Save Settings</button>
+    </div>
+
+
   </div>
 </div>
        
